--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore ./OciDesigns/OciDesigns.sln
     - name: Build
-      run: dotnet build
+      run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
