--- a/.github/workflows/main_ocidesigns2.yml
+++ b/.github/workflows/main_ocidesigns2.yml
@@ -20,6 +20,7 @@ jobs:
           uses: github/super-linter@v4
           env:
             VALIDATE_ALL_CODEBASE: false
+            VALIDATE_YAML: false
             DEFAULT_BRANCH: "main"
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
