--- a/.github/workflows/testweb_ocidesignstest.yml
+++ b/.github/workflows/testweb_ocidesignstest.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - ocidesignstest
+name: CICD ocidesignstest
 
 on:
   push:
@@ -10,6 +10,22 @@ on:
   workflow_dispatch:
 
 jobs:
+  run-lint:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v3
+          with:
+            fetch-depth: 0
+
+        - name: Lint Code Base
+          uses: github/super-linter@v4
+          env:
+            VALIDATE_ALL_CODEBASE: false
+            VALIDATE_YAML: false
+            DEFAULT_BRANCH: "TestWeb"
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            
   build:
     runs-on: windows-latest
 
