--- a/.github/workflows/testweb_ocidesignstest.yml
+++ b/.github/workflows/testweb_ocidesignstest.yml
@@ -69,6 +69,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'ocidesignstest'
-          slot-name: 'Staging'
+          slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C19B9CB18D7D4A51AF3ECC609919EF20 }}
           package: .
