--- a/.github/workflows/developweb_ocidesignsdev.yml
+++ b/.github/workflows/developweb_ocidesignsdev.yml
@@ -23,7 +23,7 @@ jobs:
           env:
             VALIDATE_ALL_CODEBASE: false
             VALIDATE_YAML: false
-            DEFAULT_BRANCH: "main"
+            DEFAULT_BRANCH: "DevelopWeb"
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             
   build:
@@ -55,7 +55,7 @@ jobs:
     runs-on: windows-latest
     needs: build
     environment:
-      name: 'Production'
+      name: 'Development'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
