Revert "Merge TestWeb to main"
This reverts commit adff144cf5e5be477f9473b76b94897fed77997b, reversing
changes made to d1fe6f62a9616fbd3f188bdef1664296dc95fc98.

--- a/.github/workflows/main_ocidesigns2.yml
+++ b/.github/workflows/main_ocidesigns2.yml
@@ -1,12 +1,10 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: CI/CD ocidesignstest
+---
+name: Build and deploy ASP.Net Core app to Azure Web App - ocidesigns2
 
 on:
   push:
     branches:
-      - TestWeb
+      - main
   workflow_dispatch:
 
 jobs:
@@ -23,9 +21,9 @@ jobs:
           env:
             VALIDATE_ALL_CODEBASE: false
             VALIDATE_YAML: false
-            DEFAULT_BRANCH: "TestWeb"
+            DEFAULT_BRANCH: "main"
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            
+          
   build:
     runs-on: windows-latest
     needs: run-lint
@@ -55,7 +53,7 @@ jobs:
     runs-on: windows-latest
     needs: build
     environment:
-      name: 'Staging'
+      name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -68,7 +66,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'ocidesignstest'
+          app-name: 'ocidesigns2'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C19B9CB18D7D4A51AF3ECC609919EF20 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_92332B45CA964087AF192710DB7ADBDF }}
           package: .
